Fix team management scrolling on mobile

--- a/DreamTeam/ClientApp/src/app/modules/user/teams/manage/team-manage.component.less
+++ b/DreamTeam/ClientApp/src/app/modules/user/teams/manage/team-manage.component.less
@@ -4,6 +4,9 @@
   align-self: flex-start;
 }
 
+.col-available-players {
+  background-color: #fff;
+}
 
 .col-captain {
   white-space: nowrap;
